added RSS for posts in one collection and for posts in all collections

--- a/_includes/story_header.html
+++ b/_includes/story_header.html
@@ -35,7 +35,7 @@
     {% endif %}
     )
     <br>by {{ site.author }}
-    <br>{{ site.url }}
+    <br>{{ site.url }}, <span class="rss-subscribe"><a href="feed.xml">RSS</a></span>
     <br>published: {{ include.page.date | date_to_long_string }}
     <br>...
     <br>This work is licensed under a
