--- a/_includes/story_header.html
+++ b/_includes/story_header.html
@@ -27,7 +27,7 @@
   <div style="text-align:center;">
     ...
     {% assign collection = (site.collections | where:"label", include.page.collection | first %}
-    <br><strong>{{ include.page.title }}</strong> ( a <a href=".">{{ collection.title }}</a>
+    <br><strong>{{ include.page.title }}</strong> (<a href=".">{{ collection.title }}</a>
     {% if document.size > 1 %}
       -
       {% if prevurl %}<a href="{{prevurl}}" class="prev">PREV</a>{% endif %}
