--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
       <div style="text-align:center;">THE</div>
       <div style="text-align:center;">END</div>
       <p></p>
-      {% include story_header.html page=page %}
+      {% include story_header.html %}
     {% endif %}
   </div>
 
