--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
     <p class="post-meta">
       <!-- <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time> -->
       {% assign collection = (site.collections | where:"label", page.collection | first %}
-      {{ collection.title_singular }}
+      <a href=".">{{ collection.title_singular }}</a>
       {% if page.author %}
         by <span itemprop="author" itemscope itemtype="http://schema.org/Person">
             <span itemprop="name">{{ page.author }}</span>
