added under construction

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,14 +33,22 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+
+          <li>
+            {% include icon-rss.html %}
+          </li>
         </ul>
       </div>
 
       <div class="footer-col footer-col-3">
         <p>{{ site.description | escape }}</p>
       </div>
-    </div>
 
+
+    </div>
+    <h3>NB, this site is still under construction...</h3>
+    <img src="/assets/Construction_of_the_Eiffel_Tower.JPG" alt="The Eiffel Tower was once under construction too.">
+    (Image with thanks to <a href="https://commons.wikimedia.org/wiki/Tour_Eiffel">commons.wikimedia.org</a>)
   </div>
 
 </footer>
