--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
         {% endfor %}
 
         {% for my_page in site.pages %}
-          {% if my_page.title %}
+          {% if my_page.title and my_page.layout == 'page' %}
           <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
           {% endif %}
         {% endfor %}
