added distractions collection to hold bedtime bribery links, also tweaked RSS segment to only display if >0 posts

--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -13,6 +13,11 @@ layout: default
 
 </article>
 
+{% assign collection_name = page.collection %}
+{% assign collection = (site.collections | where:"label", collection_name | first %}
+{% assign posts = (site[collection_name] | where:"layout", "post") %}
+{% if posts.size > 0 %}
 <h3>The collection also available</h3>
 
 ...<a href="feed.xml" class="rss-subscribe">via RSS</a>
+{% endif %}
