--- a/_includes/collection_prev_next.html
+++ b/_includes/collection_prev_next.html
@@ -36,13 +36,13 @@
     {% if include.prev %}
       {% assign prevtext = include.prev %}
     {% else %}
-      {% assign prevtext = 'PREV' %}
+      {% assign prevtext = '&lt;&lt;PREV' %}
     {% endif %}
 
     {% if include.next %}
       {% assign nexttext = include.next %}
     {% else %}
-      {% assign nexttext = 'NEXT' %}
+      {% assign nexttext = 'NEXT&gt;&gt;' %}
     {% endif %}
 
     <a href="{{ prevurl }}" class="prev">{{ prevtext }}</a>
