ensure PREV and NEXT do not get separated

--- a/_includes/collection_prev_next.html
+++ b/_includes/collection_prev_next.html
@@ -45,7 +45,6 @@
       {% assign nexttext = 'NEXT&gt;&gt;' %}
     {% endif %}
 
-    <a href="{{ prevurl }}" class="prev">{{ prevtext }}</a>
-    <a href="{{ nexturl }}" class="next">{{ nexttext }}</a>
+    <a href="{{ prevurl }}" class="prev">{{ prevtext }}</a>&nbsp;<a href="{{ nexturl }}" class="next">{{ nexttext }}</a>
   {% endif %}
 {% endif %}
