--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,13 @@ layout: default
       {% assign collection = (site.collections | where:"label", page.collection | first %}
       <a href=".">{{ collection.title_singular }}</a>
       {% if page.author %}
+        {% assign author = page.author %}
+      {% else %}
+        {% assign author = site.author %}
+      {% endif %}
+      {% if author %}
         by <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-            <span itemprop="name">{{ page.author }}</span>
+            <span itemprop="name">{{ author }}</span>
           </span>
       {% endif %}
       {% if page.collection != 'posts' %}
