step one of simple in-jekyll search

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,8 @@
 
     <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
 
+    {% include search.html %}
+
     <nav class="site-nav">
       <span class="menu-icon">
         <svg viewBox="0 0 18 15" width="18px" height="15px">
