--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,10 @@
 
     {% include footer.html %}
 
+    {% if page.url == "/search.html" %}
+      {% include search_results.html %}
+    {% endif %}
+
   </body>
 
 </html>
