--- a/_includes/search_results.html
+++ b/_includes/search_results.html
@@ -52,10 +52,27 @@
       }
 
       const re = new RegExp(q, 'i');
+      const knownPageHrefs = {};
 
       json.forEach(page => {
-        if (page) {
+        if (page && page.href.endsWith('.html')) {
           if (page.title.match(re)) {
+            knownPageHrefs[page.href] = true;
+            const li = document.createElement("li");
+            const linkElt = document.createElement("a");
+            linkElt.href = page.href;
+            const text = page.title + ((page.categories.includes("story"))? " (story)": "");
+            linkElt.textContent = text;
+            li.appendChild(linkElt);
+            resultsUlElt.appendChild(li);
+          }
+        }
+      });
+
+      json.forEach(page => {
+        if (page && page.href.endsWith('.html') && !knownPageHrefs[page.href]) {
+          if (page.content.match(re)) {
+            knownPageHrefs[page.href] = true;
             const li = document.createElement("li");
             const linkElt = document.createElement("a");
             linkElt.href = page.href;
