--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -24,6 +24,16 @@
   }
 }
 
+.site-search {
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 56px;
+  letter-spacing: -1px;
+  margin-bottom: 0;
+  margin-left: 5%;
+  float: left;
+}
+
 .site-nav {
   float: right;
   line-height: 56px;
