refactored predicting-the-present non-story posts

--- a/_includes/collection_prev_next.html
+++ b/_includes/collection_prev_next.html
@@ -16,7 +16,7 @@
     {% endif %}
   {% endfor %}
 
-  {% assign posts = (site[page.collection] | where:"layout", "post") %}
+  {% assign posts = (site[page.collection] | where:"layout", "post" | where: "categories","story" ) %}
 
   {% if posts.size > 1 %}
     {% if include.sort_by %}
