--- a/_includes/header.html
+++ b/_includes/header.html
@@ -59,7 +59,7 @@
             {% endfor %}
           {% endif %}
 
-          {% assign sorted_pages = (site[page.collection] | where:"layout", "page" | sort: 'date' | sort: 'sequence') %}
+          {% assign sorted_pages = (site[page.collection] | where:"layout", 'page' | sort: 'date' | sort: 'sequence') %}
           {% if sorted_pages.size > 0 %}
             <hr/>
             {% for my_page in sorted_pages %}
@@ -71,6 +71,20 @@
               <a class="page-link" href="{{ my_page.url | relative_url }}">{{ prefix }}{{ my_page.title | escape }}</a>
             {% endfor %}
           {% endif %}
+
+          {% assign sorted_pages = (site[page.collection] | where:"layout", 'auto-generated' | sort: 'date' | sort: 'sequence') %}
+          {% if sorted_pages.size > 0 %}
+            <hr/>
+            {% for my_page in sorted_pages %}
+              {% if my_page.title == page.title %}
+                {% assign prefix = "*&nbsp;" %}
+              {% else %}
+                {% assign prefix = "" %}
+              {% endif %}
+              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ prefix }}{{ site.auto-generated-title | escape }}</a>
+            {% endfor %}
+          {% endif %}
+
         {% endif %}
       </div>
     </nav>
