--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
       </span>
 
       <div class="trigger">
+        <!-- list main collections -->
         {% assign collections = (site.collections | sort: 'sequence') %}
         {% for collection in collections %}
           {% if collection.label == page.collection %}
@@ -31,6 +32,7 @@
           {% endif %}
         {% endfor %}
 
+        <!-- list main site pages, e.g. 'about' -->
         {% for my_page in site.pages %}
           {% if my_page.title and my_page.layout == 'page' %}
             {% if my_page.title == page.title %}
@@ -43,6 +45,8 @@
         {% endfor %}
 
         {% if page.collection %}
+
+          <!-- list posts in collection -->
           {% assign sorted_posts = (site[page.collection] | where:"layout", "post" | sort: 'date' | sort: 'sequence') %}
           {% if reverse_collection_posts %}
             {% assign sorted_posts = sorted_posts | reverse %}
@@ -59,6 +63,7 @@
             {% endfor %}
           {% endif %}
 
+          <!-- list pages in collection -->
           {% assign sorted_pages = (site[page.collection] | where:"layout", 'page' | sort: 'date' | sort: 'sequence') %}
           {% if sorted_pages.size > 0 %}
             <hr/>
@@ -72,6 +77,7 @@
             {% endfor %}
           {% endif %}
 
+          <!-- list auto-generated page in collection -->
           {% assign sorted_pages = (site[page.collection] | where:"layout", 'auto-generated' | sort: 'date' | sort: 'sequence') %}
           {% if sorted_pages.size > 0 %}
             <hr/>
@@ -86,6 +92,8 @@
           {% endif %}
 
         {% endif %}
+
+        <div class="page-link">  </div>
       </div>
     </nav>
 
