--- a/_layouts/auto-generated.html
+++ b/_layouts/auto-generated.html
@@ -7,6 +7,8 @@ layout: default
     {% assign collection = (site.collections | where:"label", page.collection | first %}
 
     <h1 class="post-title">{{ site.auto-generated-title }} <br>{{ collection.title | escape }}</h1>
+
+    <p><em>shaking all the stories together and (metaphorically) tipping out the bits.</em></p>
   </header>
 
   <div class="post-content">
