fixed bug which mant no prev/next for jekyll posts

--- a/_includes/collection_prev_next.html
+++ b/_includes/collection_prev_next.html
@@ -17,6 +17,9 @@
   {% endfor %}
 
   {% assign posts = (site[page.collection] | where:"layout", "post" | where: "categories","story" ) %}
+  {% if posts.size == 0 %}
+    {% assign posts = (site[page.collection] | where:"layout", "post" ) %}
+  {% endif %}
 
   {% if posts.size > 1 %}
     {% if include.sort_by %}
