--- a/_layouts/auto-generated.html
+++ b/_layouts/auto-generated.html
@@ -6,7 +6,9 @@ layout: default
   <header class="post-header">
     {% assign collection = (site.collections | where:"label", page.collection | first %}
 
-    <h1 class="post-title">{{ site.auto-generated-title }} <br>{{ collection.title | escape }}</h1>
+    <h1 class="post-title"><em>{{ site.auto-generated-title }}</em> 
+      <br><a href="{{ collection.label | relative_url }}">{{ collection.title | escape }}</a>
+    </h1>
 
     <p><em>shaking all the stories together and (metaphorically) tipping out the bits.</em></p>
   </header>
