--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -163,6 +163,10 @@ pre {
   padding-right: $spacing-unit;
   padding-left: $spacing-unit;
   @extend %clearfix;
+  background-color: cornsilk;
+  padding-top: $spacing-unit;
+  padding-bottom: $spacing-unit;
+  border-radius: $spacing-unit;
 
   @include media-query($on-laptop) {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
