--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -34,6 +34,11 @@
   float: left;
 }
 
+.site-collection-description {
+  clear: both;
+  font-style: italic;
+}
+
 .site-nav {
   float: right;
   line-height: 56px;
