--- a/_includes/icon-rss.html
+++ b/_includes/icon-rss.html
@@ -1,6 +1,6 @@
 <a href="/feed.xml">
   <span class="icon icon--rss">
-    <img src="/assets/feed-icon-14x14.png" alt="RSS">
+    <img src="/assets/img/feed-icon-14x14.png" alt="RSS">
   </span>
   <span class="username">
     RSS of all collections
