--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,7 +46,7 @@
 
 
     </div>
-    <h3>NB, this site is still under construction...</h3>
+    <h3>NB, this site is always under construction...</h3>
     <img src="/assets/img/general/Construction_of_the_Eiffel_Tower.JPG" alt="The Eiffel Tower was once under construction too.">
     (Image with thanks to <a href="https://commons.wikimedia.org/wiki/Tour_Eiffel">commons.wikimedia.org</a>)
   </div>
