--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -17,8 +17,9 @@ body {
   font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
   color: $text-color;
   background-color: $background-color;
-  background-image: url('/assets/img/general/reflections_2016-12-27_13.31.04_w1280_cropped.jpg');
   background-repeat: no-repeat;
+  background-size: 100%;
+  background-attachment: fixed;
 
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
