--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -1,11 +1,17 @@
 ---
 layout: default
 ---
+{% assign collection_name = page.collection %}
+{% assign collection = (site.collections | where:"label", collection_name | first %}
+
 <article class="post">
 
-  <header class="post-header">
+  <!-- <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
+    <blockquote class="site-collection-description">
+      <p>{{ collection.description }}</p>
+    </blockquote>
+  </header> -->
 
   <div class="post-content">
     {{ content }}
@@ -13,8 +19,6 @@ layout: default
 
 </article>
 
-{% assign collection_name = page.collection %}
-{% assign collection = (site.collections | where:"label", collection_name | first %}
 {% assign posts = (site[collection_name] | where:"layout", "post") %}
 {% if posts.size > 0 %}
 <h3>The collection also available</h3>
