--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -24,6 +24,20 @@
   }
 }
 
+.collection-title {
+  font-size: 150%;
+  font-weight: 300;
+  line-height: 56px;
+  letter-spacing: -1px;
+  margin-bottom: 0;
+  float: left;
+  font-style: normal;
+  &,
+  &:visited {
+    color: $grey-color-dark;
+  }
+}
+
 .site-search {
   font-size: 18px;
   font-weight: 300;
